syntax = "proto3";

option go_package = "github.com/bqxtt/book_online/rent/pkg/sdk/include/userpb";

import "include/google/protobuf/timestamp.proto";

package sdk;

enum USER_ROLE {
  UNKNOWN = 0;
  NORMAL = 1;
  ADMIN = 2;
}

message User {
  int64 user_id = 1;
  string name = 2;
  string avatar_url = 3;
  USER_ROLE role = 4;
  string department = 5;
  string class = 6;
  string motto = 7;
  google.protobuf.Timestamp created_at = 8;
}

message UserAuth {
  int64 user_id=1;
  string pwd_digest=2;
}
